# Ollama_Host

./: README.md  requirements.txt
ollama_local/: README.md  pyproject.toml
ollama_local/run_w_email/: main.py
ollama_local/src/ollama_local/: crew.py  main.py
ollama_local/src/ollama_local/config/: agents.yaml  tasks.yaml
ollama_local/src/ollama_local/tools/: custom_tool.py  read.py  read_image.py
