[project]
name = "ollama_local"
version = "0.1.0"
description = "ollama_local using crewAI"
authors = [{ name = "Quan Do", email = "dohuudangquan@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
ollama_local = "ollama_local.main:run"
run_crew = "ollama_local.main:run"
train = "ollama_local.main:train"
replay = "ollama_local.main:replay"
test = "ollama_local.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
